Oct 13, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added gametype strings for TribalCTF and Threewave.
  Unfortunately TribalCTF servers modify their gamename variable,
  so this is not really useful yet.

Oct 13, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added gameaholic.com rune server list
- game and gametype are now displayed in LaunchInfo.txt

Oct 07, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- changed default commandline for qs & qws for quakeforge
- added default commandlines for rune,tribes2,wolf and ut

Oct 05, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- removed quakeforge workaround
- added -Wall to CFLAGS

Oct 05, 2001: Jordi Mallach <jordi@sindominio.net>
- fixed a variable type in es.po which was making it segfault directly.
  Thanks, Ludwig.

Oct 03, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- initial descent3 support (requires qstat 2.4e)
- changed version to 0.9.7c (new master for descent3)
- added quakeforge workaround
- updated german translation
- fixed player filter dialog bug

Oct 01, 2001: Jordi Mallach <jordi@sindominio.net>
- updated Spanish translation, again :)

Oct 01, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- major redesign of settings dialog
- individually configurable nick for q1,qw,q2,t2
- more translatabe strings
- updated german translation

Oct 01, 2001: Jordi Mallach <jordi@sindominio.net>
- updated Spanish translation
- added some notes in BUGS

Sep 30, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- disabled write_quake_variables function for q3
- added ability to use custom configs for q3
- made some error popups translatable
- updated german translation

Sep 28, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added Rune support
- changed layout of game configuration screen

Sep 28, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added support for games using the gamespy protocol
- added q3,ut,sof,nolf,rally masters,turok2 and shogo masters
- made game names translatable